2005-12-04  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix INITIALIZE

2005-11-28  Roger While <simrw@sim-basis.de>

	* parser.y, tree.c, typeck.c : Improve error checking
	  codegen.c : Fix -debug code generation

2005-11-25  Roger While <simrw@sim-basis.de>

	* scanner.l, pplex.l : clean up
	  cobc.c : Don't use mkstemp on non-Win
		   Tidy cleanup code
		   Add in bs2000 to help text
		   getopt includes
		   Put back in -fno-gcse
	  codegen.c : Preliminary sticky-linkage code
		      Further mods for perform-osvs

2005-11-09  Roger While <simrw@sim-basis.de>

	* parser.y, tree.h, tree.c : Implement SAME RECORD

2005-11-06  Roger While <simrw@sim-basis.de>

	* parser.y, cobc.h, typeck.c, codegen.c : EXTERNAL changes
	* typeck.c, codegen.c : character test optimization

2005-11-05  Roger While <simrw@sim-basis.de>

	* codegen.c : Preliminary code for perform OSVS

2005-11-04  Roger While <simrw@sim-basis.de>

	* cobc.c : Take out option -no-gcse
	* codegen.c : Don't use arrays for local stack variables
	  Put in experimental (deactivated) setjmp/longjmp code
	  for performs.

2005-11-01  Roger While <simrw@sim-basis.de>

	* codegen.c : Take out attribute aligned. It borks 
	  under Cygwin latest.

2005-10-31  Roger While <simrw@sim-basis.de>

	* cobc.c : Cater for -Wno-pointer-check correctly

2005-10-26  Roger While <simrw@sim-basis.de>

	* typeck.c : Remove HAVE_DB ifdef

2005-10-25  Roger While <simrw@sim-basis.de>

	* cobc.c, typeck.c : Add in optimizations (memset/memcpy)

2005-10-14  Roger While <simrw@sim-basis.de>

	* All : More GCC 4 fixes
	* typeck.c : Take out last references to cb_runtime_inlining
	* flag.def : Mark -fruntime_inlining as deprecated in help text

2005-10-13  Roger While <simrw@sim-basis.de>

	* cobc.c : For GCC >= 4, add -Wnopointer-sign

2005-10-06  Roger While <simrw@sim-basis.de>

	* pplex.l : Ignore DATE-MODIFIED

2005-10-06  Roger While <simrw@sim-basis.de>

	* Indent again - typeck.c