@@ -1,5 +1,9 @@
 2005-12-04  Roger While <simrw@sim-basis.de>
 
+	* intrinsic.c : Fix strftime for MingW
+
+2005-12-04  Roger While <simrw@sim-basis.de>
+
 	* byteswap.h : Take out typedefs. They are likely to
 	  clash with standard includes.
 
